# rust-mismatchfinder

./: Cargo.toml  README.md
example/: example.bam  example.bam.bai
src/: bamreader.rs  lib.rs  main.rs  output.rs
src/bamreader/: cigar.rs  filter.rs  fragment.rs  mismatch.rs
src/bamreader/filter/: germline.rs  region.rs
src/output/: tsvwriter.rs  vcfwriter.rs
